[project]
name = "langchain-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "langchain>=0.3.25",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "matplotlib>=3.10.3",
    "oauth2client>=4.1.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
